--- a/src/font.css
+++ b/src/font.css
@@ -8,7 +8,7 @@
     font-family: "Virgil";
     font-style: normal;
     font-display: swap;
-    src: url("data-base64:~fonts/nanum-pretty-mk.ttf") format("woff2");
+    src: url("data-base64:~fonts/SSFaithfulness.ttf") format("woff2");
     unicode-range: U+1100-11FF, U+AC00-D7A3;
 }
 @font-face {
